Deprecate notPreferredQuarkusBomConstraint in favor of the new option foreignPreferredConstraint